Add other point symmetries